--- a/sample/package.json
+++ b/sample/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-editor",
   "version": "1.0.0",
-  "description": "VSCode web sample",
+  "description": "Codiyum sample",
   "scripts": {
     "sample": "node ./http.js"
   },
